--- a/тк4.html
+++ b/тк4.html
@@ -110,7 +110,7 @@
                     <div class="card">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_EQw77TsBL1rcD5D9ELIFcSB6oxX5FobgtQ&s" class="card-img-top" alt="Собака">
                         <div class="card-body">
-                            <h5 class="card-title">Мухтар</h5>
+                            <h5 class="card-title">Косточкин</h5>
                             <p class="card-text">Весёлый и активный пёс.</p>
                             <a href="#" class="btn btn-primary">Подробнее</a>
                         </div>
